testing convert to ical

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "ical": "^0.8.0",
     "ical-generator": "^3.6.1",
+    "moment-timezone": "^0.5.41",
     "xlsx": "^0.18.5"
   },
   "name": "excel-to-ics",
